--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
+  "name": "combo-social",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "menu": "adb shell input keyevent 82"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~41.0.1",
-    "expo-status-bar": "~1.0.4",
-    "firebase": "^8.4.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-elements": "^3.4.1",
-    "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0"
+    "expo": "~44.0.0",
+    "expo-status-bar": "~1.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
