--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-barcode-scanner": "~11.2.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
-    "react-native-web": "0.17.1",
-    "expo-barcode-scanner": "~11.2.0"
+    "react-native-qrcode-svg": "^6.1.2",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
