--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
-    "expo-barcode-scanner": "~11.2.0",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^47.0.0",
+    "expo-barcode-scanner": "~12.1.0",
+    "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-elements": "^3.4.2",
     "react-native-qrcode-svg": "^6.1.2",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
