--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "firebase": "^9.6.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-elements": "^3.4.2",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "@expo/webpack-config": "^0.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
