--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
     "expo": "^47.0.0",
     "expo-barcode-scanner": "~12.1.0",
     "expo-status-bar": "~1.4.2",
@@ -18,11 +19,11 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
     "react-native-elements": "^3.4.2",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.7",
-    "@expo/webpack-config": "^0.17.2"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
