--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-barcode-scanner": "~12.1.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.6",
+    "number-to-locale-string-polyfill": "^1.0.9",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
